# slopmortem

./: .gitattributes  .gitignore  .gitmodules  .importlinter  AGENTS.md  Makefile  README.md  codecov.yml  conftest.py  demo.cast  docker-compose.yml  example.cast  flake.nix  justfile  pyproject.toml  slopmortem.toml
.github/workflows/: ci.yml
data/crunchbase/: companies-closed.csv
docs/: architecture.md  cassettes.md
docs/examples/: README.md
docs/examples/crypto-savings-yield/: query.md  report.md
docs/examples/home-video-game-console/: example.cast  query.md  report.md
docs/examples/toy-factory-porto/: example.cast  query.md  report.md
docs/learning/: 2026-05-02-corpus-fixture-drops.md
docs/learning/retrieval/: 01-foundations.md  02-glossary.md  03-hybrid-and-fusion.md  README.md
docs/plans/: 2026-04-28-slopmortem-implementation.md  2026-04-29-corpus-recorder.md  2026-04-29-eval-cassettes.md  2026-04-29-onnx-embedding.md  2026-04-29-task-10-carryovers.md  2026-04-29-task-10-followup-deferred-paths.md  2026-05-01-audit-fixes.md  2026-05-01-cleanup-findings.md  2026-05-01-corpus-scaling-fixes.md  2026-05-01-eval-runner-cassette-fix.md  2026-05-02-corpus-fixture-rebuild.md  2026-05-02-encapsulation-refactor.md  2026-05-02-extract-ingest-function.md  2026-05-02-idiomatic-cleanup.md  2026-05-02-split-ingest-function.md  2026-05-03-pipeline-policy-and-orchestrator-split.md  2026-05-03-three-minor-improvements.md
docs/specs/: 2026-04-27-slopmortem-design.md  2026-04-27-start-slop-design.md  2026-04-28-design-review-issues.md  2026-04-28-design-review.md  2026-04-28-design-spec-blockers.md  2026-04-28-openrouter-api-corrections.md  2026-04-28-plan-review-findings.md  2026-04-29-eval-cassettes-design.md  2026-04-29-onnx-embedding-design.md  2026-04-30-query-progress-ui-design.md  2026-05-01-encapsulation-refactor-design.md  2026-05-01-eval-runner-cassette-fix-design.md  2026-05-02-cassette-recording-rich-ui-design.md
scripts/: filter_crunchbase_closed.py
slopmortem/: __init__.py  _time.py  budget.py  cli.py  cli_progress.py  concurrency.py  config.py  deps.py  errors.py  http.py  ingest.py  models.py  pipeline.py  render.py
slopmortem/cli/: __init__.py  _app.py  _common.py  _embed_prefetch_cmd.py  _ingest_cmd.py  _query_cmd.py  _replay_cmd.py
slopmortem/corpus/: __init__.py  _alias_graph.py  _chunk.py  _db.py  _disk.py  _embed_sparse.py  _entity_resolution.py  _extract.py  _merge.py  _merge_text.py  _paths.py  _qdrant_store.py  _reclassify.py  _reconcile.py  _store.py  _summarize.py  _tools_impl.py  alias_graph.py  chunk.py  disk.py  embed_sparse.py  entity_resolution.py  extract.py  merge.py  merge_text.py  paths.py  qdrant_store.py  reclassify.py  reconcile.py  schema.py  store.py  summarize.py  taxonomy.yml  tools_impl.py
slopmortem/corpus/sources/: __init__.py  _names.py  _throttle.py  base.py  corporate_hierarchy_overrides.yml  crunchbase_csv.py  curated.py  hn_algolia.py  platform_domains.yml  tavily.py  wayback.py
slopmortem/evals/: __init__.py  assertions.py  cassettes.py  corpus_fixture.py  corpus_recorder.py  qdrant_setup.py  recording.py  recording_helper.py  recording_progress.py  render.py  runner.py
slopmortem/ingest/: __init__.py  _fan_out.py  _helpers.py  _impls.py  _ingest.py  _journal_writes.py  _orchestrator.py  _ports.py  _slop_gate.py  _warm_cache.py
slopmortem/llm/: __init__.py  cassettes.py  client.py  embedding_client.py  embedding_factory.py  fake.py  fake_embeddings.py  fastembed_client.py  openai_embeddings.py  openrouter.py  prices.yml  tools.py
slopmortem/llm/prompts/: __init__.py  consolidate_risks.j2  facet_extract.j2  summarize.j2  (+4 more)
slopmortem/stages/: __init__.py  cluster_lessons.py  consolidate_risks.py  facet_extract.py  llm_rerank.py  retrieve.py  synthesize.py
slopmortem/tracing/: __init__.py  events.py
tests/: test_budget.py  test_cassettes.py  test_cli_embed_prefetch.py  test_cli_ingest.py  test_cli_progress.py  test_cli_reclassify.py  test_cli_reconcile.py  test_cli_smoke.py  test_config.py  test_eval_assertions.py  test_eval_runner.py  test_ingest_dry_run.py  test_ingest_idempotency.py  test_ingest_orchestration.py  test_justfile_init_env.py  test_list_review.py  test_models.py  test_observe_redaction.py  test_paths.py  test_pipeline_e2e.py  test_prompts.py  test_reclassify.py  test_recording.py  test_safe_post.py  test_ssrf.py  test_synthesis_tools.py  test_tavily_tools.py  test_taxonomy.py  test_tool_signature_contract.py  test_tools_schema.py  test_tracing_guard.py
tests/corpus/: conftest.py  test_alias_graph.py  test_chunk.py  test_disk_atomic.py  test_entity_resolution.py  test_merge_deterministic.py  test_merge_journal.py  test_qdrant_setup.py  test_qdrant_store.py  test_quarantine_journal.py  test_reconcile_repairs.py  test_reconcile_skeleton.py  test_schema_and_store.py  test_summarize.py
tests/evals/: baseline.json  test_corpus_fixture.py  test_corpus_fixture_coverage.py  test_recording_helper.py  test_recording_progress.py  test_runner_replay.py  test_runner_scoring.py
tests/fakes/: corpus.py
tests/fixtures/: corpus_fixture.jsonl  corpus_fixture_inputs.yml  curated_test.yml
tests/ingest/: test_dry_run.py  test_ingest_internals.py  test_journal_writes.py  test_orchestration.py  test_orchestrator_helpers.py  test_per_entry_isolation.py  test_reliability_rank.py  test_slop_gate.py  test_warm_cache.py
tests/llm/: test_cache_warm.py  test_concurrency.py  test_embedder_factory.py  test_embeddings.py  test_fake.py  test_fastembed_client.py  test_openrouter_cassette.py  test_openrouter_unit.py  test_secrets_scrub.py
tests/sources/: test_crunchbase_csv.py  test_curated.py  test_curated_v0_schema.py  test_extract_visible_text_only.py  test_hn_algolia.py  test_robots_and_throttle.py  test_tavily_enricher.py  test_wayback.py
tests/stages/: conftest.py  test_cluster_lessons.py  test_consolidate_risks.py  test_facet_extract.py  test_injection_propagation.py  test_llm_rerank.py  test_render.py  test_retrieve.py  test_synthesize.py  test_synthesize_injection_defense.py  test_synthesize_url_filter.py
(+124 files in other folders)
