[project]
name = "slopmortem"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "openai>=1.50",
  "qdrant-client>=1.14",
  "fastembed>=0.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "typer>=0.12",
  "trafilatura>=1.10",
  "readability-lxml>=0.8.1",
  "tldextract>=5.1",
  "jsonref>=1.1",
  "jinja2>=3.1",
  "tiktoken>=0.7",
  "binoculars>=0.0.4",
  "lmnr>=0.4",
  "anyio>=4.4",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "tavily-python>=0.5",
]

[project.scripts]
slopmortem = "slopmortem.cli:app"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-recording>=0.13",
  "pytest-xdist>=3.6",
  "syrupy>=4.6",
  "jsonschema>=4.23",
  "ruff>=0.6",
  "basedpyright>=1.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Formatter conflicts (ruff format owns these)
  "W191",
  "E111", "E114", "E117",
  "D206", "D300",
  "Q000", "Q001", "Q002", "Q003",
  "COM812", "COM819",
  "ISC001", "ISC002",
  # Mutually exclusive docstring rule pairs (must pick one)
  "D203",  # conflicts with D211
  "D213",  # conflicts with D212
  # Practically unenforceable
  "CPY001",  # missing copyright header on every file
  # `Any` is used deliberately for SDK passthroughs and Jinja contexts;
  # basedpyright's `reportAny` is the real gate (each site carries
  # `# pyright: ignore[reportAny]` with rationale).
  "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",     # assert is fine in tests
  "PLR2004",  # magic numbers fine in tests
  "ANN",      # don't require annotations in tests
  "D",        # don't require docstrings in tests
  "SLF001",   # tests can poke private attrs
  "ARG",      # unused fixture args are common
  "INP001",   # tests dir doesn't need __init__.py
]
"conftest.py" = ["ANN", "D", "INP001"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic needs annotation classes available at runtime for model_rebuild() /
# json schema generation, so do not move their imports into TYPE_CHECKING.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.basedpyright]
include = ["slopmortem", "tests"]
extraPaths = ["."]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportAny = "error"
reportExplicitAny = "error"
reportImplicitOverride = "error"
reportUnreachable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"
reportMissingTypeStubs = false

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false  # tests poke private helpers; mirrors ruff's SLF001 exemption
