[project]
name = "slopmortem"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "openai>=2.33",
  "qdrant-client>=1.17.1",
  "fastembed>=0.8",
  "pydantic>=2.13",
  "pydantic-settings>=2.14",
  "typer>=0.25",
  "trafilatura>=2.0",
  "readability-lxml>=0.8.4",
  "tldextract>=5.3",
  "jsonref>=1.1",
  "jinja2>=3.1",
  "tiktoken>=0.12",
  "lmnr>=0.7",
  "anyio>=4.13",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "tavily-python>=0.7",
  "uuid7>=0.1",
]

[project.scripts]
slopmortem = "slopmortem.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["slopmortem*"]

[dependency-groups]
dev = [
  "pytest>=9",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7.0",
  "pytest-recording>=0.13",
  "pytest-xdist>=3.8",
  "syrupy>=5.1",
  "jsonschema>=4.26",
  "ruff>=0.15",
  "basedpyright>=1.39",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
  "requires_qdrant: integration test that requires a live Qdrant on localhost:6333",
  "slow: test loads heavy assets (e.g., a ~550MB ONNX model). Excluded with -m 'not slow'.",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["external"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Formatter conflicts (ruff format owns these)
  "W191",
  "E111", "E114", "E117",
  "D206", "D300",
  "Q000", "Q001", "Q002", "Q003",
  "COM812", "COM819",
  "ISC001", "ISC002",
  # Mutually exclusive docstring rule pairs (must pick one)
  "D203",  # conflicts with D211
  "D213",  # conflicts with D212
  # Practically unenforceable
  "CPY001",  # missing copyright header on every file
  # Deferred-work policy: TODOs must carry a tracked issue link (TD003 still
  # enforces that), but the meta "you have a TODO, resolve it" warning is
  # noise for items we have intentionally postponed.
  "FIX002",
  # `Any` is used deliberately for SDK passthroughs and Jinja contexts;
  # basedpyright's `reportAny` is the real gate (each site carries
  # `# pyright: ignore[reportAny]` with rationale).
  "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",     # assert is fine in tests
  "PLR2004",  # magic numbers fine in tests
  "ANN",      # don't require annotations in tests
  "D",        # don't require docstrings in tests
  "SLF001",   # tests can poke private attrs
  "ARG",      # unused fixture args are common
  "INP001",   # tests dir doesn't need __init__.py
  "ASYNC240", # blocking Path I/O is fine in async test setup/assertions
]
"conftest.py" = ["ANN", "D", "INP001"]
"scripts/**" = [
  "T201",     # CLI scripts print to stdout
  "INP001",   # scripts dir is not a package
]

[tool.ruff.lint.flake8-type-checking]
# Pydantic needs annotation classes available at runtime for model_rebuild() /
# json schema generation, so do not move their imports into TYPE_CHECKING.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.basedpyright]
include = ["slopmortem", "tests"]
extraPaths = ["."]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportAny = "error"
reportExplicitAny = "error"
reportImplicitOverride = "error"
reportUnreachable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportImplicitStringConcatenation = "error"
reportMissingTypeStubs = false

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false  # tests poke private helpers; mirrors ruff's SLF001 exemption
